# cognivibe

./: .env  .gitignore  CHANGELOG.md  README.md  STYLE_GUIDE.md  index.html  package-lock 2.json  package-lock.json  package.json  vite.config.ts
.git.backup/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  config  index
.github/instructions/: Release.instructions.md  Update packages.instructions.md
.github/workflows/: publish.yml
src/: App.css  hero.ts  main.tsx  routeTree.gen.ts
src-tauri/: 2  Cargo.toml  entitlements.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/functions/: focus_main_window.rs  get_running_apps.rs  handle_deep_link.rs  input_tracker.rs  keystroke_logger.rs  mod.rs  mouse_tracker.rs  settings.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/api/: types.rs
src-tauri/src/modules/api/functions/: backfill_scores.rs  fetch_batch_scores.rs  fetch_productivity_time 2.rs  fetch_sessions.rs  mod.rs
src-tauri/src/modules/debug/: mod.rs  trigger_debug_nudge.rs
src-tauri/src/modules/deeplinks/: mod.rs  types.rs
src-tauri/src/modules/deeplinks/functions/: mod.rs  setup_deep_link_handlers.rs
src-tauri/src/modules/settings/: mod.rs  types.rs
src-tauri/src/modules/settings/functions/: get_settings_cmd.rs  load_settings_from_store.rs  mod.rs  update_settings_cmd.rs
src-tauri/src/modules/state/: mod.rs  types.rs
src-tauri/src/modules/state/functions/: clear_extreme_zscore_alert.rs  clear_session_state.rs  focus_timer.rs  get_extreme_zscore_alert.rs  get_measuring_state.rs  get_session_info.rs  get_settings_state.rs  get_user_session.rs  mod.rs  set_user_session.rs
src-tauri/src/modules/tracker/: mod.rs  types.rs
src-tauri/src/modules/tracker/functions/: calculate_majority_category.rs  check_extreme_zscore 2.rs  check_extreme_zscore.rs  check_interventions.rs  get_is_measuring.rs  get_measuring_state.rs  input.rs  input_callback.rs  log_active_window.rs  mod.rs  reset_input_data.rs  search_app_directory.rs  session_management.rs  session_notifications.rs  start_global_input_tracker.rs  start_minute_logger.rs  toggle_measuring.rs  upload_data.rs
src-tauri/src/modules/tracker/functions/callback/: handle_button_press.rs  handle_button_release.rs  handle_key_press.rs  handle_key_release.rs  handle_mouse_move.rs  handle_wheel_event.rs  input_callback.rs  mod.rs  shared_utils.rs
src-tauri/src/modules/utils/: mod.rs  types.rs
src-tauri/src/modules/utils/functions/: capture_screen.rs  colors.rs  focus_main_window.rs  force_destroy_window.rs  get_api_base_url.rs  get_screen_resolution.rs  mod.rs  open_notification_settings.rs  window.rs
src/components/: BreakManager.tsx  Dasboard.tsx  DashboardPage.tsx  HelpButton.tsx  SessionSurvey.tsx  index.ts
src/contexts/: DashboardContext.tsx  PomodoroContext.tsx
src/hooks/: index.ts  useAppSettings.ts  useAuth.ts  useDashboardData.ts  useExtremeZScoreAlert 2.ts  useExtremeZScoreAlert.ts  useMacOSPermissions.ts  useMeasuring.ts  usePomodoroStreak.ts  useProductivityTime.ts  (+3 more)
supabase/: config.toml
(+104 files in other folders)
