[package]
name = "cognivibe"
version = "1.1.1"
description = "Cognivibe is a productivity tool designed to help you measure and improve your cognitive performance."
authors = ["Cognivibe Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cognivibe_lib"
# Desktop builds only need an `rlib` (the `staticlib`/`cdylib` outputs are mainly
# for mobile embedding and can cause toolchain/config-specific link issues).
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2.2.1"
tauri-plugin-http = "2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-os = "2"
# For input tracking
rdev = { git = "https://github.com/rustdesk-org/rdev" }
chrono = "0.4.41"
# For system information, current open apps
sysinfo = "0.36"
# For formatted console output
owo-colors = "4.2.2"
comfy-table = "7.1.1"
# For window tracking
active-win-pos-rs = "0.9"
dotenv = "0.15.0"
# For URL parsing
url = "2.5"


[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.3.2", features = ["deep-link"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-prevent-default = "3"
